--- a/0x13-javascript_objects_scopes_closures/.vscode/settings.json
+++ b/0x13-javascript_objects_scopes_closures/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Occurences"],
+  "cSpell.words": ["esrever", "Occurences", "revlist"],
   "compile-hero.disable-compile-files-on-did-save-code": true
 }
